# robert_v_sandbox

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  README.md  code_0.cpp  nodelet_plugins.xml  package.xml  rosdoc.yaml
include/robert_v_sandbox/: calculator_nodelet.h  my_math_operators.h
launch/: calculator.launch  calculator_nodelet.launch
my_temoto_ws/actions/ta_resource_registrar_demo/: CMakeLists.txt  package.xml  umrf.json
my_temoto_ws/actions/ta_resource_registrar_demo/launch/: action_test_separate.launch  action_test_standalone.launch
my_temoto_ws/actions/ta_resource_registrar_demo/test/: invoker_umrf.json
my_temoto_ws/actions/ta_rr_component_example/: CMakeLists.txt  package.xml  umrf.json
my_temoto_ws/actions/ta_rr_pipe_example/: CMakeLists.txt  package.xml  umrf.json
my_temoto_ws/my_temoto_ws/: CMakeLists.txt  package.xml
my_temoto_ws/my_temoto_ws/config/: action_dst.yaml  components.yaml  pipes.yaml
my_temoto_ws/my_temoto_ws/launch/: action_assistant.launch  temoto.launch
pydoc/: Makefile  calculator_node.rst  conf.py  index.rst  modules.rst
scripts/: calculator_node.py  hello.bash
src/: calculator_node.cpp  calculator_nodelet.cpp  my_math_operators.cpp
src/test/: calculator_test.cpp
srv/: AddTwoNumbers.srv
temoto_ws/: CMakeLists.txt  package.xml
temoto_ws/actions/ta_manoeuvre/: CMakeLists.txt  package.xml  umrf.json
temoto_ws/actions/ta_manoeuvre/include/ta_manoeuvre/: macros.h  temoto_action.h
temoto_ws/actions/ta_manoeuvre/launch/: action_test_separate.launch  action_test_standalone.launch
temoto_ws/actions/ta_manoeuvre/src/: ta_manoeuvre.cpp
temoto_ws/actions/ta_manoeuvre/test/: invoker_umrf.json  umrf_graph.txt
temoto_ws/actions/ta_navigation/: CMakeLists.txt  package.xml  umrf.json
temoto_ws/actions/ta_navigation/include/ta_navigation/: macros.h  temoto_action.h
temoto_ws/actions/ta_navigation/launch/: action_test_separate.launch  action_test_standalone.launch
temoto_ws/actions/ta_navigation/src/: ta_navigation.cpp
temoto_ws/actions/ta_navigation/test/: invoker_umrf.json
temoto_ws/actions/ta_survey/: CMakeLists.txt  package.xml  umrf.json
temoto_ws/actions/ta_survey/include/ta_survey/: macros.h  temoto_action.h
temoto_ws/actions/ta_survey/launch/: action_test_separate.launch  action_test_standalone.launch
temoto_ws/actions/ta_survey/src/: ta_survey.cpp
temoto_ws/actions/ta_survey/test/: invoker_umrf.json
temoto_ws/config/: action_dst.yaml  add_child_umrf.json  components.yaml  jackal_construction_world.pgm  jackal_construction_world.yaml  remove_umrf.json  robot_description.yaml
temoto_ws/include/temoto_ws/: plugin_base.h
temoto_ws/launch/: action_assistant.launch  dummy_controller.launch  jackal_controller_sim.launch  jackal_driver_sim.launch  temoto.launch
temoto_ws/src/: test_app.cpp  test_plugin_1.cpp  test_plugin_2.cpp
temoto_ws/temoto_ws/: CMakeLists.txt  package.xml
temoto_ws/temoto_ws/config/: components.yaml
temoto_ws/temoto_ws/launch/: action_assistant.launch  temoto.launch
temoto_ws/temoto_ws/umrf_parameters/: direction.param.umrf.json  distance.param.umrf.json  pose.param.umrf.json  position.param.umrf.json  verb.param.umrf.json
temoto_ws/umrf_graphs/graph_1/: TaNavigation.umrf.json  TaNavigation0.umrf.json  TaSurvey.umrf.json  TaSurvey0.umrf.json
temoto_ws/umrf_graphs/graph_10/: TaNavigation0.umrf.json
temoto_ws/umrf_graphs/graph_11/: TaNavigation0.umrf.json  TaNavigation1.umrf.json
temoto_ws/umrf_graphs/graph_14/: TaNavigation0.umrf.json
temoto_ws/umrf_graphs/graph_15/: TaSurvey0.umrf.json
temoto_ws/umrf_graphs/graph_16/: TaSurvey0.umrf.json
temoto_ws/umrf_graphs/graph_17/: TaManoeuvre0.umrf.json
temoto_ws/umrf_graphs/graph_18/: TaManoeuvre0.umrf.json
temoto_ws/umrf_graphs/graph_19/: TaSurvey0.umrf.json
temoto_ws/umrf_graphs/graph_20/: TaManoeuvre0.umrf.json  TaManoeuvre1.umrf.json  TaSurvey0.umrf.json
temoto_ws/umrf_graphs/graph_21/: TaNavigation0.umrf.json
temoto_ws/umrf_graphs/graph_22/: TaManoeuvre0.umrf.json
temoto_ws/umrf_graphs/graph_24/: TaNavigation0.umrf.json
temoto_ws/umrf_graphs/graph_25/: TaManoeuvre0.umrf.json
temoto_ws/umrf_graphs/graph_26/: TaSurvey0.umrf.json
temoto_ws/umrf_graphs/graph_27/: TaManoeuvre0.umrf.json  TaSurvey0.umrf.json
temoto_ws/umrf_graphs/graph_28/: TaManoeuvre0.umrf.json
temoto_ws/umrf_graphs/graph_29/: TaManoeuvre0.umrf.json
temoto_ws/umrf_graphs/graph_3/: TaNavigation.umrf.json  TaNavigation0.umrf.json
temoto_ws/umrf_graphs/graph_30/: TaSurvey0.umrf.json
temoto_ws/umrf_graphs/graph_33/: TaManoeuvre0.umrf.json
temoto_ws/umrf_graphs/graph_34/: TaManoeuvre0.umrf.json  TaManoeuvre1.umrf.json
temoto_ws/umrf_graphs/graph_35/: TaNavigation0.umrf.json
temoto_ws/umrf_graphs/graph_37/: TaManoeuvre0.umrf.json
temoto_ws/umrf_graphs/graph_39/: TaManoeuvre0.umrf.json
temoto_ws/umrf_graphs/graph_4/: TaSurvey.umrf.json
temoto_ws/umrf_graphs/graph_40/: TaManoeuvre0.umrf.json
temoto_ws/umrf_graphs/graph_43/: TaSurvey0.umrf.json
temoto_ws/umrf_graphs/graph_44/: TaManoeuvre0.umrf.json
temoto_ws/umrf_graphs/graph_45/: TaSurvey0.umrf.json
temoto_ws/umrf_graphs/graph_46/: TaManoeuvre0.umrf.json
temoto_ws/umrf_graphs/graph_48/: TaManoeuvre0.umrf.json
temoto_ws/umrf_graphs/graph_5/: TaNavigation.umrf.json  TaNavigation0.umrf.json
temoto_ws/umrf_graphs/graph_6/: TaManoeuvre0.umrf.json  TaSurvey0.umrf.json  TaSurvey1.umrf.json
temoto_ws/umrf_graphs/graph_7/: TaManoeuvre0.umrf.json  TaNavigation0.umrf.json  TaNavigation1.umrf.json  TaSurvey0.umrf.json  TaSurvey1.umrf.json  TaSurvey2.umrf.json
temoto_ws/umrf_graphs/graph_8/: TaManoeuvre0.umrf.json
temoto_ws/umrf_graphs/graph_9/: TaManoeuvre0.umrf.json
temoto_ws/umrf_params/: state.param.umrf.json
test/: calculator_test_launch.test
trajectory_recorder/: CMakeLists.txt  README.md  package.xml
trajectory_recorder/include/trajectory_recorder/: trajectory_recorder.h
trajectory_recorder/src/: trajectory_recorder.cpp  trajectory_recorder_node.cpp
trajectory_recorder/srv/: GetRecordedTrajectory.srv  TrajectoryRecorderControl.srv
(+15 files in other folders)
