<?xml version="1.0"?>
<package format="2">
  <name>robert_v_sandbox</name>
  <version>0.0.0</version>
  <description>The robert_v_sandbox package</description>

  <maintainer email="robert.valner@ut.ee">Robert Valner</maintainer>

  <license>Apache-2.0</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>python-catkin-pkg</build_depend>
  <build_depend>nodelet</build_depend>

  <build_export_depend>roscpp</build_export_depend>

  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>rostest</exec_depend>
  <exec_depend>nodelet</exec_depend>
  <exec_depend>rospack</exec_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <rosdoc config="rosdoc.yaml" />
    <nodelet plugin="${prefix}/nodelet_plugins.xml" />
  </export>
</package>
