<?xml version="1.0"?>
<package format="2">
  <name>my_temoto_ws</name>
  <version>0.0.0</version>
  <description>The my_temoto_ws package</description>

  <!-- Author tags are optional, multiple are allowed, one per tag -->
  <!-- Authors do not have to be maintainers, but could be -->
  <!-- Example: -->
  <!-- <author email="jane.doe@example.com">Jane Doe</author> -->
  
  <maintainer email="todo@todo.todo">todo</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>>
  <build_depend>rospy</build_depend>
  <build_depend>temoto_action_assistant</build_depend>

  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>temoto_action_assistant</exec_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->
  </export>
</package>